实现了验证和重定向